--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ quarkus.datasource.password=170899
 quarkus.datasource.jdbc.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/ORCL
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
+quarkus.container-image.build=true
+quarkus.package.type=uber-jar
+quarkus.http.port=${PORT:8080}
